@@ -9,13 +9,13 @@
 
 
   Program <bands>  v. 2.5.0alpha2  starts ...
-  Date  2Aug2013 at 16: 0:13 
+  Date  4Aug2013 at 22: 9:29 
 
      Number of MPI processes:       6
 
 
 
-          BUILT :    Wed 31 Jul 2013 06:56:36 PM CEST
+          BUILT :    Sun 04 Aug 2013 04:35:33 PM CEST
            HOST :    x86_64-unknown-linux-gnu
            ARCH :    x86_64
              CC :    icc
@@ -366,13 +366,13 @@
 
               bands_input :     0.00s CPU
            datafiles_init :     0.00s CPU
-            postproc_init :     0.01s CPU
-             want_dftread :     0.00s CPU
-                want_init :     0.00s CPU
+            postproc_init :     0.07s CPU
+             want_dftread :     0.01s CPU
+                want_init :     0.05s CPU
        para_get_poolindex :     0.00s CPU (      12 calls,   0.000 s avg)
              windows_read :     0.00s CPU
             subspace_read :     0.00s CPU
-                 do_bands :     0.05s CPU
+                 do_bands :     0.01s CPU
              compute_kham :     0.00s CPU (      34 calls,   0.000 s avg)
 
 
